--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,6 @@
     <groupId>com.da.auto</groupId>
     <artifactId>autodemo</artifactId>
     <version>1.0-SNAPSHOT</version>
-
     <properties>
         <maven.compiler.target>11</maven.compiler.target>
         <maven.compiler.source>11</maven.compiler.source>
@@ -16,6 +15,7 @@
         <allure-attachment.version>2.21.0</allure-attachment.version>
         <aspectjweaver.version>1.9.19</aspectjweaver.version>
         <lombok.version>1.18.30</lombok.version>
+        <yaml.version>2.0</yaml.version>
     </properties>
     <dependencies>
         <dependency>
@@ -45,8 +45,24 @@
             <version>${lombok.version}</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.aspectj</groupId>
+            <artifactId>aspectjweaver</artifactId>
+            <version>${aspectjweaver.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+            <version>${yaml.version}</version>
+        </dependency>
     </dependencies>
     <build>
+        <testSourceDirectory>${basedir}/src/test</testSourceDirectory>
+        <testResources>
+            <testResource>
+                <directory>${basedir}/src/resources</directory>
+            </testResource>
+        </testResources>
         <plugins>
             <!-- Run test -->
             <plugin>
@@ -55,7 +71,7 @@
                 <version>${maven-surefire-plugin}</version>
                 <configuration>
                     <suiteXmlFiles>
-                        <suiteXmlFile>testng.xml</suiteXmlFile>
+                        <suiteXmlFile>${basedir}/src/testng.xml</suiteXmlFile>
                     </suiteXmlFiles>
                     <argLine>
                         -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectjweaver.version}/aspectjweaver-${aspectjweaver.version}.jar"
@@ -63,16 +79,9 @@
                     <testFailureIgnore>true</testFailureIgnore>
                     <systemPropertyVariables>
                         <!--report path-->
-                        <allure.results.directory>target/allure-results</allure.results.directory>
+                        <allure.results.directory>allure-results</allure.results.directory>
                     </systemPropertyVariables>
                 </configuration>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.aspectj</groupId>
-                        <artifactId>aspectjweaver</artifactId>
-                        <version>${aspectjweaver.version}</version>
-                    </dependency>
-                </dependencies>
             </plugin>
         </plugins>
     </build>
