--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,13 @@
             <artifactId>snakeyaml</artifactId>
             <version>${yaml.version}</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.10.1</version>
+        </dependency>
+
     </dependencies>
     <build>
         <testSourceDirectory>${basedir}/src/test</testSourceDirectory>
